--- a/index.html
+++ b/index.html
@@ -45,22 +45,6 @@
       <img src="https://source.unsplash.com/7bwQXzbF6KE/800x400" alt="" />
     </div>
 
-    <script>
-      const inputs = document.querySelectorAll(".controls input");
-
-      function controlFunction() {
-        const suffix = this.dataset.sizing || this.dataset.blur || "";
-
-        document.documentElement.style.setProperty(
-          `--${this.name}`,
-          this.value + suffix
-        );
-      }
-
-      inputs.forEach((input) => {
-        input.addEventListener("change", controlFunction);
-        input.addEventListener("mousemove", controlFunction);
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
