--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <input type="color" name="base" id="base" value="#ffc600" />
       </div>
 
-      <img src="https://source.unsplash.com/7bwQXzbF6KE/800x400" alt="" />
+      <img src="main-img.jpg" alt="" />
     </div>
 
     <script src="script.js"></script>
